<resources>
    <string name="app_name">Media Handler</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_login">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_or">or</string>
    <string name="forgot_password">forgot password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_playlists">Playlists</string>
    <string name="bottom_nav_video">Video</string>
    <string name="bottom_nav_audio">Audio</string>
    <string name="bottom_nav_setting">Setting</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="error_retrieving_playlists">Error in retrieving the playlists</string>
    <string name="api_key_error">API Key not valid or maximum number of requests reached</string>
    <string name="local_source_error">Error retrieving data from local source</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="title_activity_prova_fullsceen">ActivityProvaFullsceen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="refresh">refresh</string>
    <string name="totalHours">Total hours</string>
    <string name="totalMinutes">Total Minutes</string>
    <string name="totalSeconds">Total Seconds</string>
    <string name="totalTimeError">Empty Playlist</string>
    <string name="my_playlists">My playlists</string>
    <string name="videoTitle">Title of Video</string>
    <string name="videoDescription">Description of video</string>
    <string name="detailed_time">Total hours: 10h 13m 12s</string>
    <string name="updating">updating</string>
    <string name="error_password">Password should be at least 6 characters</string>
    <string name="error_email">Insert a valid email address</string>
    <string name="error_login_password_message">The password is invalid</string>
    <string name="error_login_user_message">There is no user record corresponding to this identifier</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="error_user_collision_message">The email address is already in use by another account</string>
    <string name="logout">Logout</string>
    <string name="SyncButton">Synchronize to Server</string>
    <string name="sync_success_upl">Synchronization upload successfull</string>
    <string name="sync_error_upl">Synchronization upload error</string>
    <string name="sync_success_dwn">Synchronization download successfull</string>
    <string name="sync_error_dwn">Synchronization download error</string>
    <string name="fragment_settings_name">Settings</string>
    <string name="fragment_login_auth_name">Authorization Google</string>
    <string name="fragment_video_player">Local Video Player</string>
    <string name="fragment_audio">Local Audio tracks</string>
    <string name="fragment_video">Local Videos</string>
    <string name="fragment_local_audio_player">Local Audio Player</string>
    <string name="fragment_local_video_player">Local Video Player</string>
    <string name="LoadingFromRemote">Loading From Database</string>
</resources>