<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nested_youtube"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/bottom_nav_playlists" />
    <item
        android:id="@+id/fragment_audio"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/bottom_nav_video" />
    <item
        android:id="@+id/fragment_video"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/bottom_nav_musica" />
    <item
        android:id="@+id/fragment_settings"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/bottom_nav_setting" />
</menu>