<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/topAppBarDelete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/topAppBarInfo"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/topAppBarRefresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
</menu>